--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="icons">
-        
+
             <a href="https://www.facebook.com/pages/Forever-Dead/35133030656"><svg width="100" height="100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
                 <path class="icon" fill="#fff" id="facebook-icon" d="M204.067,184.692h-43.144v70.426h43.144V462h82.965V254.238h57.882l6.162-69.546h-64.044 c0,0,0-25.97,0-39.615c0-16.398,3.302-22.89,19.147-22.89c12.766,0,44.896,0,44.896,0V50c0,0-47.326,0-57.441,0c-61.734,0-89.567,27.179-89.567,79.231C204.067,174.566,204.067,184.692,204.067,184.692z"/></svg></a>
             <a href="https://twitter.com/XForeverDeadX"><svg width="100" height="100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
@@ -43,7 +43,7 @@
                     c-0.917,39.162,27.146,75.781,67.795,83.949c-11.896,3.237-24.926,3.978-38.17,1.447c10.754,33.58,41.972,58.018,78.96,58.699
                     C139.604,378.282,94.846,390.721,50,385.436c37.406,23.982,81.837,37.977,129.571,37.977c156.932,0,245.595-132.551,240.251-251.435
                     C436.339,160.061,450.668,145.174,462,128.223z"/></svg></a>
-            <a href="https://www.youtube.com/user/georgegratz"><svg width="100" height="100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve"> 
+            <a href="https://www.youtube.com/user/georgegratz"><svg width="100" height="100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
                 <path class="icon" fill="#fff" id="youtube-icon" d="M129.861,50h24.735l16.933,63.551L187.265,50h24.951l-28.58,94.504v64.486h-24.558v-64.486L129.861,50z
                      M211.104,179.739c0,20.668,10.8,31.428,31.949,31.428c17.538,0,31.35-11.729,31.35-31.428V122.25
                     c0-18.357-13.674-31.509-31.35-31.509c-19.204,0-31.949,12.691-31.949,31.509V179.739z M233.544,124.184
@@ -86,7 +86,18 @@
                 <path class="icon" fill="#fff" id="email-2-icon" d="M49.744,103.407v305.186H50.1h411.156h1V103.407H49.744z M415.533,138.407L255.947,260.465
                     L96.473,138.407H415.533z M84.744,173.506l85.504,65.441L84.744,324.45V173.506z M85.1,373.593l113.186-113.186l57.654,44.127
                     l57.375-43.882l112.941,112.94H85.1z M427.256,325.097l-85.896-85.896l85.896-65.695V325.097z"/></svg></a>
-            
+
         </div>
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9487590-19"></script>
+        <script async src="/js/main.js"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-9487590-19');
+        </script>
+
     </body>
 </html>
