added spotify link

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <img src="img/logo.png" alt="Forever Dead">
         </div>
 
+        <iframe src="https://open.spotify.com/follow/1/?uri=spotify:artist:4pCtP5S2XbyFyqbo70q7gU&size=detail&theme=dark&show-count=0" width="170" height="56" scrolling="no" frameborder="0" style="border:none; overflow:hidden; margin: 0 auto 4rem; display: block" allowtransparency="true"></iframe>
+
         <div class="icons">
 
             <a href="https://www.facebook.com/pages/Forever-Dead/35133030656"><svg width="100" height="100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
