--- a/epk/index.html
+++ b/epk/index.html
@@ -29,7 +29,7 @@
 
         <!-- Add your site or application content here -->
         <div class="logo logo--small">
-            <img src="/img/logo.png" alt="Forever Dead">
+            <a href="/"><img src="/img/logo.png" alt="Forever Dead"></a>
         </div>
 
         <div class="container">
