--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
 
         </div>
 
+        <p class="epk-link">
+            <a href="/epk/">Electronic Press Kit (EPK)</a>
+        </p>
+
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-9487590-19"></script>
         <script async src="/js/main.js"></script>
